--- a/athletes/templates/athletes/edit.html
+++ b/athletes/templates/athletes/edit.html
@@ -41,8 +41,7 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
 
                         </div>
 
-
-                        <div class="col-sm-2 col-form-label">
+                        <div class="col-sm-1 col-form-label">
                             <label for="start_time">Date:</label>
                             {% if form.start_time.errors %}
                                 {% for error in form.start_time.errors %}
@@ -52,13 +51,14 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                                 {% endfor %}
                             {% endif %}
                         </div>
-                        <div for="start_time" class="col-sm-3">
+                        <div for="start_time" class="col-sm-4">
                             <input type="datetime-local" for="start_time" name="start_time" class="form-control" value="{{form.start_time.value | date:'Y-m-d'}}T{{form.start_time.value | time:'H:i'}}" id='date'required>
                         </div>
                         
                     </div>
 
                     <div class="form-group row">
+
                         <div class="col-sm-2 col-form-label">
                             <label for="comments">Comments:</label>
                             {% if form.comments.errors %}
@@ -69,8 +69,25 @@ https://tutorial.djangogirls.org/en/django_forms/ -->
                                 {% endfor %}
                             {% endif %}
                         </div>
-                        <div class="col-sm-10">
+                        <div class="col-sm-5">
                             <textarea class="form-control" rows="10" type="text" name="comments" required>{% if form.comments.value != None %}{{form.comments.value}}{% endif %}</textarea>
+                        </div>
+
+                        <div class="col-sm-1 col-form-label">
+                            <label for="comments">Tags:</label>
+                            {% if form.tags.errors %}
+                                {% for error in form.tags.errors %}
+                                    <div class="alert alert-danger">
+                                        <strong>{{ error | escape }}</strong>
+                                    </div>
+                                {% endfor %}
+                            {% endif %}
+                        </div>
+                        <div class="col-sm-4">
+                            <textarea class="form-control" rows="10" type="text" name="tags" placeholder="e.g.
+#pelvis_hurt 3
+#slept 8
+#dehydrated">{% if form.tags.value != None %}{{form.tags.value}}{% endif %}</textarea>
                         </div>
                     </div>
 
