--- a/athletes/templates/athletes/index.html
+++ b/athletes/templates/athletes/index.html
@@ -20,11 +20,18 @@
 			</div>
 
 			<div class="col-sm-6">
-				{% if preferences.advanced %}
-					<a class="btn btn-default pull-right" href="{% url 'athletes:toggle_advanced' %}">Hide Advanced Graphs</a>
-				{% else %}
-					<a class="btn btn-default pull-right" href="{% url 'athletes:toggle_advanced' %}">Show Advanced Graphs</a>
-				{% endif %}
+				<div class="btn-group pull-right">
+				  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				    <span class="glyphicon glyphicon-cog"></span> <span class="caret"></span>
+				  </button>
+				  <ul class="dropdown-menu">
+				  	{% if preferences.advanced %}
+					<li><a href="{% url 'athletes:toggle_advanced' %}">Hide Advanced Graphs</a></li>
+					{% else %}
+					<li><a href="{% url 'athletes:toggle_advanced' %}">Show Advanced Graphs</a></li>
+					{% endif %}
+				  </ul>
+				</div>
 			</div>
 
 		</div>
