--- a/athletes/templates/athletes/base.html
+++ b/athletes/templates/athletes/base.html
@@ -106,6 +106,10 @@
 				<li>
 					<a href="/athletes/connections">Manage Connections</a>
 				</li>
+
+				<li>
+					<a href="{% url 'athletes:tag_access' %}">Manage Tag Access</a>
+				</li>
 				
 
 				<li role="separator" class="divider"></li>
