changed some small HTML stuff

--- a/athletes/templates/athletes/base.html
+++ b/athletes/templates/athletes/base.html
@@ -108,7 +108,7 @@
 				</li>
 
 				<li>
-					<a href="{% url 'athletes:tag_access' %}">Manage Tag Access</a>
+					<a href="{% url 'athletes:tag_access' %}">Coach Permissions</a>
 				</li>
 				
 
