--- a/athletes/templates/athletes/tag_access.html
+++ b/athletes/templates/athletes/tag_access.html
@@ -9,7 +9,7 @@
 
     <div class="container-fluid">
 
-        <h1>Manage Tag Access</h1>
+        <h1>Coach Permissions</h1>
         <hr>
 
         {% if messages %}
@@ -25,7 +25,7 @@
             <table class="table">
 
 			  <tr>
-			    <th>Tag</th>
+			    <th>Item</th>
 			    <th>Allow Coaches to Access</th>
 			  </tr>
 
