added GPX support and run expectation.

--- a/athletes/templates/athletes/base.html
+++ b/athletes/templates/athletes/base.html
@@ -71,7 +71,7 @@
 			<ul class="dropdown-menu">
 				
 				<li>
-					<a href="/athletes/upload_one"><span class="glyphicon glyphicon-upload"></span> Upload Fit File</a>
+					<a href="/athletes/upload_one"><span class="glyphicon glyphicon-upload"></span> Upload File</a>
 				</li>
 
 				<li>
