--- a/athletes/templates/athletes/help.html
+++ b/athletes/templates/athletes/help.html
@@ -5,21 +5,43 @@
 
 	<div class="container-fluid">
 
-		<h1>How to Download Your Fit Files</h1>
+    <h1>How to Download GPX Files</h1>
+      <div style="padding-left: 30px">
+          <h2>Garmin</h2>
 
-            <div style="padding-left: 30px">
-                <h2>Garmin</h2>
+          <ol type="1">
+            <li>Go to <a href="https://connect.garmin.com" target="_blank">Garmin Connect</a></li>
+            <li>Navigate to the activity whose GPX file you'd like to download.</li>
+            <li>Click on the <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> button in the top right corner.</li>
+            <li>Click on "Export to GPX" from the dropdown menu. The downloaded file should end in ".gpx" (e.g. activity_1654467998.gpx)</li>
+          </ol> 
 
-                <img src="">
+          <h2>Polar</h2>
 
-                <ol type="1">
-                  <li>Go to <a href="https://connect.garmin.com" target="_blank">Garmin Connect</a></li>
-                  <li>Navigate to the activity whose FIT file you'd like to download.</li>
-                  <li>Click on the <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> button in the top right corner.</li>
-                  <li>Click on "Export Original" from the dropdown menu. The downloaded file should end in ".zip" (e.g. 19204901.zip)</li>
-                  <li>Double click on the ".zip" file and it will unzip into a ".fit" file</li>
-                </ol> 
-     </div>
+          <ol type="1">
+            <li>Go to <a href="https://flow.polar.com/" target="_blank">Polar Flow</a></li>
+            <li>Navigate to the activity whose GPX file you'd like to download.</li>
+            <li>Scroll to the bottom of the page and click on "Export Session" (bottom left)</li>
+            <li>Click on "Route (GPX)" from the pop-up window menu. The downloaded file should end in ".gpx" (e.g. Katie_Hanss_2017-03-29_16-58-05.gpx)</li>
+          </ol> 
+
+      </div>
+
+
+		<h1>How to Download FIT Files</h1>
+
+      <div style="padding-left: 30px">
+          <h2>Garmin</h2>
+
+
+          <ol type="1">
+            <li>Go to <a href="https://connect.garmin.com" target="_blank">Garmin Connect</a></li>
+            <li>Navigate to the activity whose FIT file you'd like to download.</li>
+            <li>Click on the <span class="glyphicon glyphicon-cog" aria-hidden="true"></span> button in the top right corner.</li>
+            <li>Click on "Export Original" from the dropdown menu. The downloaded file should end in ".zip" (e.g. 19204901.zip)</li>
+            <li>Double click on the ".zip" file and it will unzip into a ".fit" file</li>
+          </ol> 
+      </div>
 
     </div>
 
